extend and tweak definition of listings

--- a/decl-your-lang/commands/languages/SDF.tex
+++ b/decl-your-lang/commands/languages/SDF.tex
@@ -1,7 +1,7 @@
 \lstdefinelanguage{SDF} {
-	morekeywords={context, free, syntax, start, symbols, lexical, module, imports, exports, avoid, recover, cons, bracket, reject, templates, priorities, left},
-	otherkeywords={},
-	morecomment=[l]{\%\%},
+	morekeywords={context-free, start-symbols, sorts, context, free, syntax, start,
+	symbols, lexical, module, imports, exports, avoid, recover, cons, bracket, reject, templates, priorities, left}, otherkeywords={}, morecomment=[l]{\%\%},	
+	otherkeywords={[,]},
 	sensitive=true,
 	mathescape=true
 }
