--- a/decl-your-lang/commands/languages/aterm.tex
+++ b/decl-your-lang/commands/languages/aterm.tex
@@ -1,7 +1,7 @@
 \lstdefinelanguage{ATerm} {
   morekeywords={},
   morekeywords=[2]{Variable},
-  otherkeywords={non-unique}, % {+,*,?}, % ,-,>
+  otherkeywords={non-unique,[,]}, % {+,*,?}, % ,-,>
   literate={...}{$\ldots$}2,
   comment=[l]{\%\%},
   mathescape=true,
