references for layout preservation and PAPL

--- a/decl-your-lang/bibliography.bib
+++ b/decl-your-lang/bibliography.bib
@@ -145,6 +145,23 @@ Bibliography downloaded from http://researchr.org/downloadbibtex/bibliography/me
   isbn = {978-1-4503-0942-4},
 }
 
+@inproceedings{JongeV11,
+  title = {An Algorithm for Layout Preservation in Refactoring Transformations},
+  author = {Maartje  de Jonge and Eelco Visser},
+  year = {2011},
+  doi = {http://dx.doi.org/10.1007/978-3-642-28830-2_3},
+  researchr = {http://researchr.org/publication/JongeV11},
+  cites = {0},
+  citedby = {0},
+  pages = {40-59},
+  booktitle = {Software Language Engineering - 4th International Conference, SLE 2011, Braga, Portugal, July 3-4, 2011, Revised Selected Papers},
+  editor = {Anthony M. Sloane and Uwe Aßmann},
+  volume = {6940},
+  series = {Lecture Notes in Computer Science},
+  publisher = {Springer},
+  isbn = {978-3-642-28829-6},
+}
+
 @article{JongeKVS12,
   title = {Natural and Flexible Error Recovery for Generated Modular Language Environments},
   author = {Maartje  de Jonge and Lennart C. L. Kats and Eelco Visser and Emma Söderberg},
@@ -322,6 +339,15 @@ Bibliography downloaded from http://researchr.org/downloadbibtex/bibliography/me
   volume = {72},
   number = {1-2},
   pages = {52-70},
+}
+
+@book{Krishnamurthi2014,
+  title = {Programming and Programming Languages},
+  author = {Shriram Krishnamurthi},
+  year = {2014},
+  researchr = {http://researchr.org/publication/Krishnamurthi2014},
+  cites = {0},
+  citedby = {0},
 }
 
 @inproceedings{KatsVV11,
