this book is not a primary source

--- a/decl-your-lang/preface/preface.tex
+++ b/decl-your-lang/preface/preface.tex
@@ -34,16 +34,26 @@ concepts for new users of the workbench.
 This book draws on the available material and provides references to papers and
 web pages for further reading.
 
+If you are an academic reader, note that this book is \emph{not a primary
+source}. All material in this book is based on previously published research. By
+all means do cite this book, but that does not absolve you from doing
+your homework and citing the proper primary sources. The \emph{Further Reading}
+sections in this book should help you in identifying those sources. And the
+online bibliography referred to above provides you with ready made
+\href{http://researchr.org/downloadbibtex/bibliography/metaborg-book}{bibtex
+entries}.
+
 \paragraph{In Progress}
 
 This is a book in progress, just as Spoofax itself is very much in progress.
-(Although Spoofax is much further along than this book :-) Spoofax is the
+(Although surely Spoofax is much further along than this book.) Spoofax is the
 product of an ongoing research project that investigates the nature of software
 language definition. We are continuously experimenting with better abstractions
 for various concerns.
 As a result, new features are being added to Spoofax and we are also always
 working on the guts of the workbench.
-Therefore, working with Spoofax can be a somewhat rocky experience.
+Therefore, working with Spoofax can be a somewhat rocky experience, especially
+if you are using the latest features, which we are prone to advertise.
 
 Indeed, while I start writing this book in June 2015 using the nightly-build
 descendant of Spoofax 1.4, Spoofax is about to enter a new era.
@@ -65,6 +75,6 @@ and accompanying projects.
 
 -- Eelco Visser
 
-June 14, 2015
+June 15, 2015
 
 
