more listings  tweaks

--- a/decl-your-lang/commands/languages/SDF.tex
+++ b/decl-your-lang/commands/languages/SDF.tex
@@ -1,7 +1,11 @@
 \lstdefinelanguage{SDF} {
 	morekeywords={context-free, start-symbols, sorts, context, free, syntax, start,
-	symbols, lexical, module, imports, exports, avoid, recover, cons, bracket, reject, templates, priorities, left}, otherkeywords={}, morecomment=[l]{\%\%},	
-	otherkeywords={[,]},
+	symbols, lexical, module, imports, exports, avoid, recover, cons, bracket,
+	reject, templates, priorities, left, restrictions, LAYOUT}, 
+	otherkeywords={}, 
+	morecomment=[l]{\%\%},	
+	otherkeywords={[,]},  
+	comment=[l]{\/\/},
 	sensitive=true,
 	mathescape=true
 }
