--- a/decl-your-lang/commands/listings.tex
+++ b/decl-your-lang/commands/listings.tex
@@ -20,6 +20,7 @@
 \lstset{moredelim=*[is][\underbar]{_}{_}}
 \lstset{moredelim=[is][basicstyle]{`}{`}} % to escape non-keyword words
 \lstset{showstringspaces=false}
+\lstset{commentstyle=\color{eclipse-comments}}
 
 \usepackage{atbegshi,ifthen,tikz}
 
@@ -49,6 +50,7 @@
 \input{commands/languages/coq}
 \input{commands/languages/PCFM}
 \input{commands/languages/paplj}
+\input{commands/languages/ESV}
 
 \renewcommand{\ldots}{..}
 \renewcommand{\texttt}[1]{\smcode{#1}}
