--- a/decl-your-lang/bibliography.bib
+++ b/decl-your-lang/bibliography.bib
@@ -18,6 +18,32 @@ Bibliography downloaded from http://researchr.org/downloadbibtex/bibliography/me
   isbn = {3-540-43369-4},
 }
 
+@inproceedings{Jonge02,
+  title = {Pretty-Printing for Software Reengineering},
+  author = {Merijn de Jonge},
+  year = {2002},
+  doi = {http://computer.org/proceedings/icsm/1819/18190550abs.htm},
+  researchr = {http://researchr.org/publication/Jonge02},
+  cites = {0},
+  citedby = {0},
+  pages = {550-559},
+  booktitle = {18th International Conference on Software Maintenance (ICSM 2002), Maintaining Distributed Heterogeneous Systems, 3-6 October 2002, Montreal, Quebec, Canada},
+  publisher = {IEEE Computer Society},
+  isbn = {0-7695-1819-2},
+}
+
+@inproceedings{Tomita85,
+  title = {An Efficient Context-Free Parsing Algorithm for Natural Languages},
+  author = {Masaru Tomita},
+  year = {1985},
+  tags = {parsing algorithm, context-aware, parsing},
+  researchr = {http://researchr.org/publication/Tomita85},
+  cites = {0},
+  citedby = {0},
+  pages = {756-764},
+  booktitle = {IJCAI},
+}
+
 @inproceedings{VisserOnward14,
   title = {A Language Designer's Workbench: A One-Stop-Shop for Implementation and Verification of Language Designs},
   author = {Eelco Visser and Guido Wachsmuth and Andrew P. Tolmach and Pierre Neron and Vlad A. Vergu and Augusto Passalaqua and Gabriël D. P. Konat},
@@ -81,6 +107,21 @@ Bibliography downloaded from http://researchr.org/downloadbibtex/bibliography/me
   address = {Braga, Portugal},
   publisher = {Springer},
   isbn = {978-3-540-88642-6},
+}
+
+@article{BrandV96,
+  title = {Generation of Formatters for Context-Free Languages},
+  author = {Mark G. J. van den Brand and Eelco Visser},
+  year = {1996},
+  doi = {http://doi.acm.org/10.1145/226155.226156},
+  tags = {programming languages, rule-based, translation, meta programming, SDF, interpreter, abstract syntax, language engineering, software language engineering, reuse, source-to-source, software engineering, rules, algebraic specification, source code formatting, code generation, pretty-printing,  algebra, programming, context-aware, Meta-Environment, systematic-approach, ASF+SDF, open-source, grammar},
+  researchr = {http://researchr.org/publication/BrandV96},
+  cites = {46},
+  citedby = {12},
+  journal = {ACM Transactions on Software Engineering Methodology},
+  volume = {5},
+  number = {1},
+  pages = {1-41},
 }
 
 @article{GroenewegenHV10,
@@ -192,6 +233,21 @@ Bibliography downloaded from http://researchr.org/downloadbibtex/bibliography/me
   isbn = {1-59593-348-4},
 }
 
+@article{HeeringHKR89,
+  title = {The syntax definition formalism {SDF} - reference manual},
+  author = {Jan Heering and P. R. H. Hendriks and Paul  Klint and Jan Rekers},
+  year = {1989},
+  doi = {http://doi.acm.org/10.1145/71605.71607},
+  tags = {programming languages, syntax definition, SDF, lexical syntax, abstract syntax, disambiguation, language design, C++, programming, context-aware, incremental, design, ASF+SDF},
+  researchr = {http://researchr.org/publication/HeeringHKR89},
+  cites = {0},
+  citedby = {4},
+  journal = {SIGPLAN Notices},
+  volume = {24},
+  number = {11},
+  pages = {43-75},
+}
+
 @inproceedings{KV07.spoofax,
   title = {Spoofax: An Interactive Development Environment for Program Transformation with Stratego/XT},
   author = {Karl Trygve Kalleberg and Eelco Visser},
@@ -290,6 +346,21 @@ Bibliography downloaded from http://researchr.org/downloadbibtex/bibliography/me
   cites = {0},
   citedby = {6},
   school = {University of Amsterdam},
+  advisor = {Paul  Klint},
+}
+
+@phdthesis{Rekers1992,
+  title = {Parser Generation for Interactive Environments},
+  author = {Jan Rekers},
+  year = {1992},
+  month = {January},
+  doi = {http://homepages.cwi.nl/~paulk/dissertations/Rekers.pdf},
+  tags = {GLR parsing, GLR, Meta-Environment, parsing},
+  researchr = {http://researchr.org/publication/Rekers1992},
+  cites = {0},
+  citedby = {1},
+  school = {University of Amsterdam},
+  address = {Amsterdam, The Netherlands},
   advisor = {Paul  Klint},
 }
 
@@ -557,6 +628,32 @@ Bibliography downloaded from http://researchr.org/downloadbibtex/bibliography/me
   editor = {Cristina Videira Lopes and Kathleen Fisher},
   publisher = {ACM},
   isbn = {978-1-4503-0940-0},
+}
+
+@techreport{Vis97.sglr,
+  title = {Scannerless Generalized-{LR} Parsing},
+  author = {Eelco Visser},
+  year = {1997},
+  month = {July},
+  tags = {parsing algorithm, GLR parsing, rule-based, SDF, lexical syntax, disambiguation, GLR, analysis, rules, context-aware, parsing, scannerless parsing, systematic-approach, ASF+SDF, SGLR, grammar},
+  researchr = {http://researchr.org/publication/Vis97.sglr},
+  cites = {0},
+  citedby = {5},
+  institution = {Programming Research Group, University of Amsterdam},
+  number = {P9707},
+}
+
+@techreport{Visser-1997-SDF,
+  title = {A Family of Syntax Definition Formalisms},
+  author = {Eelco Visser},
+  year = {1997},
+  month = {August},
+  tags = {syntax definition, SDF, lexical syntax, scannerless, disambiguation, context-aware, parsing, design, scannerless parsing, ASF+SDF, grammar},
+  researchr = {http://researchr.org/publication/Visser-1997-SDF},
+  cites = {0},
+  citedby = {2},
+  institution = {Programming Research Group, University of Amsterdam},
+  number = {P9706},
 }
 
 @article{Visser15,
