spoofax  paper reference

--- a/decl-your-lang/language-definition/language-definition.tex
+++ b/decl-your-lang/language-definition/language-definition.tex
@@ -107,6 +107,8 @@ tension between declarative expression and programmability
 
 \section{Further Reading}
 
+\cite{KatsV10}: original Spoofax paper
+
 \cite{Visser15}: Understanding software through linguistic abstraction
 
 \cite{WachsmuthKV14}: overview paper in IEEE Software
@@ -116,5 +118,7 @@ Spoofax
 
 \cite{GroenewegenHV10}: separation of concerns and linguistic integration in
 WebDSL \cite{Visser07}
+
+
 
 
