--- a/decl-your-lang/preface/preface.tex
+++ b/decl-your-lang/preface/preface.tex
@@ -1,7 +1,7 @@
 \chapter*{Preface}
 
 This is a book about declarative language definition with the Spoofax Language
-Workbench.
+Workbench \cite{KatsV10}.
 The aim of Spoofax is to separate the various concerns of language definition
 and implementation and provide high-level declarative meta-languages for each
 concern.
